--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
     -->
     <title>ZEE5 - Watch TV Shows, 100+ Originals, Movies, News & Live TV Online</title>
     <link href="https://www.zee5.com" rel="preconnect" crossorigin>
+    <style>
+      body{
+        background-color: #0F0617;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
